# Creditcoin

ccconsensus/: Cargo.toml
ccconsensus/src/: main.rs  work.rs
ccconsensus/src/block/: block_header.rs
ccconsensus/src/miner/: answer.rs  channel.rs  miner.rs  worker.rs
